--- a/Weibo/src/main/resources/application.properties
+++ b/Weibo/src/main/resources/application.properties
@@ -4,3 +4,7 @@ mybatis.mapper-locations=classpath:mappers/*xml
 #指定Mybatis的实体目录
 mybatis.type-aliases-package=com.tedu.weibo.mybatis.entity
 
+#添加数据库依赖
+spring.datasource.url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
